syntax = "proto3";

package user;

service UserService {
    rpc UpdateUser(UpdateUserEvent) returns (ReturnOK);
}

message ReturnOK {
    string message = 1;
}

message UpdateUserEvent {
    string name = 1;
    string email = 2;
}